<resources>
    <string name="app_name">A51 Zone Drone</string>
    <string name="drone">Drone</string>
    <string name="controller">Controller</string>
    <string name="Continue">Continue</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_controllerpage_waypoint">Map</string>
    <string name="txtConfirm">Confirm</string>
    <string name="place_holder">(Place Holder)</string>
    <string name="txtdrone_on_flight">Drone on flight... Charowt.</string>
    <string name="start">START</string>
    <string name="stop">Abort Mission!!!</string>
    <string name="location_updated_message" />
    <string name="img_location" />

    <string name="access_token" translatable="false">pk.eyJ1IjoibWVlcG5la28iLCJhIjoiY2s2OTBzM3MxMGF5aDNtbnpmcjhnOW45eiJ9.uD8F8Z7dDn5466h3Cwnv1w</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">Permission not granted.</string>
    <string name="new_location">New lat: %1$s New longitude: %2$s</string>
    <string name="text_wifi_on">OFF</string>
    <string name="txt_discover">Discover</string>
    <string name="txt_message">Message</string>
    <string name="txt_connection_status">Connection Status</string>
    <string name="txt_send">Send</string>
    <string name="txt_next">Next</string>
    <string name="txtConnected">Connecting...</string>
    <string name="contentDescription"></string>
    <string name="txt2m">2 meters</string>
    <string name="txt4m">4 meters</string>
    <string name="txt6m">6 meters</string>
    <string name="txt8m">8 meters</string>
    <string name="txt10m">10 meters</string>
    <string name="txt12m">12 meters</string>
    <string name="txt14m">14 meters</string>
    <string name="txt16m">16 meters</string>
    <string name="txt18m">18 meters</string>
    <string name="txt20m">20 meters</string>
    <string name="enable_p2p_button">WiFi Direct On/Off</string>
    <string name="be_a_developer">Be A Developer</string>
    <string name="discover_peers_button">Discover</string>
    <string name="txt_isConnected">Controller Device Name</string>
</resources>
